fix: CCP-4535 change timed out page
The timed out page used to be a warning message over the landing page, but now that the landing page is huge it doesn't look right. Timed out is warning plus plain buttons.

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -53,6 +53,18 @@ p {
   font: var(--bcds-typography-regular-small-body);
 }
 
+/* Text the same size as H5. */
+.p-xlarge {
+  font-size: 1.25rem;
+  line-height: 2.125rem;
+}
+
+/* Text the same size as H4. */
+.p-xxlarge {
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+}
+
 .v-input.v-input--disabled .v-input__control {
   background-color: rgb(var(--v-theme-surface-input-disabled)) !important;
 }
